[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Venon 1.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/venon.gd" type="Script" id=2]
[ext_resource path="res://assets/Venon 2.png" type="Texture" id=3]
[ext_resource path="res://assets/Venon 4.png" type="Texture" id=4]
[ext_resource path="res://assets/Venon 3.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 34 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.9298, 2.0732 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 0, -38 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Venon" type="Sprite" parent="."]
visible = false
position = Vector2( 0.5, 2.29688 )
scale = Vector2( 0.119136, 0.0928675 )
z_as_relative = false
texture = ExtResource( 1 )

[node name="VenonAni" type="AnimatedSprite" parent="."]
position = Vector2( 0.5, 2.297 )
scale = Vector2( 0.119, 0.093 )
frames = SubResource( 3 )
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 3 )
shape = SubResource( 1 )

[node name="HeadshotDetector" type="Area2D" parent="."]
modulate = Color( 0.168627, 0.152941, 0.635294, 1 )
position = Vector2( 0.5, 16.5 )
scale = Vector2( 2.85, 2.05 )
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadshotDetector"]
position = Vector2( 0.526316, -25 )
scale = Vector2( 1, 0.999999 )
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
position = Vector2( 2, 21 )
scale = Vector2( 3.3, 1.6 )
physics_process_parent = true

[connection signal="body_entered" from="HeadshotDetector" to="." method="_on_HeadshotDetector_body_entered"]
